# nix-config

./: .gitignore  .mergify.yml  .sops.yaml  README.md  bootstrap.sh  ci.nix  devices.nix  effects.nix  flake.nix  optimize-assets.sh  shell.nix  statix.toml  todo.txt  topology.nix
.github/workflows/: update-flake-lock.yml
esphome-hosts/: cerberus.nix  common.nix  gate-button.nix  hades-controller.nix  indoor-sensor.nix  indoor_sensor.nix  l-bokor-led.nix  l-desk-led.nix  l-desk.nix  l-eloszoba.nix  l-fali.nix  l-overhead.nix  l-pavilon.nix  op-eloszoba.nix  outside-front-sensor.nix  outside_sensor.nix  pavilon-sensor.nix  ranarp.nix
home/akos/: athena.nix  gepterem.nix  gpg-key.nix  gpg.pub  hyperion.nix  kratos.nix  ocean.nix  secrets.yaml  ssh-old.pub  ssh.pub  work-laptop.nix  zeus.nix
hosts/athena/: default.nix  disk-config.nix  hardware-configuration.nix
hosts/ceyx/: backup.nix  default.nix  disk-config.nix  hardware-configuration.nix  headscale.nix  pocket-id.nix  rustdesk.nix  secrets.yaml  ssh_host_ed25519_key.pub
hosts/common/: gaia-roots.pem  secrets.yaml
hosts/gaia/: alarm-fix.nix  backup.nix  default.nix  disk-config.nix  hardware-configuration.nix  mqtt.nix  network.nix  node-red.nix  ntp.nix  postgresql.nix  secrets.yaml
hosts/hyperion/: asterisk.nix  backup.nix  copyparty.nix  default.nix  disk-config.nix  esphome.nix  frigate.nix  hardware-configuration.nix  harmonia.nix  iscsi-target.nix  jellyfin.nix  secrets.yaml  storage-pool.nix  webserver.nix
hosts/kratos/: default.nix  disk-config.nix  gaming.nix  hardware-configuration.nix  ssh_host_ed25519_key.pub  steam.nix  vivado.nix
hosts/kratos-vm-test/: default.nix  disk-config.nix  hardware-configuration.nix  ssh_host_ed25519_key.pub
hosts/ocean/: default.nix  hardware-configuration.nix  networking.nix  ssh_host_ed25519_key.pub
hosts/uranus/: backup.nix  default.nix  deploy.nix  disk-config.nix  hardware-configuration.nix  miniflux.nix  personal-site.nix  secrets.yaml  (+1 more)
hosts/zeus/containers/torrent/qbt-manager/: Cargo.toml
hosts/zeus/containers/torrent/qbt-manager/src/: main.rs
modules/: topology.nix
modules/hosts/hyperion/asterisk/_callerid-notifier/: Cargo.toml
modules/hosts/hyperion/asterisk/_callerid-notifier/src/: main.rs
modules/hosts/hyperion/asterisk/_package-delivery-responder/: Cargo.toml
modules/hosts/hyperion/asterisk/_package-delivery-responder/src/: main.rs
modules/hosts/hyperion/containers/torrent/_qbt-manager/: Cargo.toml
modules/hosts/hyperion/containers/torrent/_qbt-manager/src/: main.rs
modules/hosts/hyperion/owntracks-to-dawarich/: .env  .gitignore  Cargo.toml
modules/hosts/hyperion/owntracks-to-dawarich/src/: main.rs
overlays/: 0001-fix-tests-remove-missing-timezone.patch  default.nix
pkgs/: default.nix  microsoft-edge.nix  quintom-hyprcursor.nix  quintom-ink-hyprcursor.nix
(+586 files in other folders)
