[package]
name = "callerid-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
asterisk-ari = "0.3.0"
env_logger = "0.11.8"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
itertools = "0.14.0"
log = "0.4.27"
phonenumber = "0.3.7"
rumqttc = { version = "0.25.0", default-features = false }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "connect"] }
tokio-util = { version = "0.7.16", features = ["net", "codec"] }
webrtc-util = "0.11.0"
