[package]
name = "package-delivery-responder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
asterisk-ari = "0.3.0"
async-openai = { version = "0.29.2", features = ["realtime"] }
audio-codec-algorithms = "0.7.0"
env_logger = "0.11.8"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
itertools = "0.14.0"
log = "0.4.27"
rtp = "0.13.0"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "connect"] }
tokio-util = { version = "0.7.16", features = ["net", "codec"] }
webrtc-util = "0.11.0"
