[package]
name = "qbt-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
env_logger = "0.11.5"
log = "0.4.22"
qbit-rs = { git = "https://github.com/George-Miao/qbit", default-features = false }
rumqttc = { version = "0.24.0", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["full"] }
tokio_schedule = "0.3.2"
